fix: [#64807] Debug